# expense_tracker

./: .env.sample  .gitignore  README.md  appspec.yml  parse_transactions.py  pyproject.toml  scrape.py  test.ipynb
lambda/: update_function.py
lambda/package/: README.md  handler.py
server/: api.py  parse_transactions.py  pyproject.toml  schema.py  scrape.py
server/alembic/: env.py
server/alembic/versions/: 4bc985f005df_added_transaction_and_tag_tables.py
server/db/: __init__.py  create_tables.py  models.py  queries.py
transaction_lists/: .~lock.33753884_1692090183649.xls#
