[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = ""
authors = ["SibiAkkash <sibi.akkash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
xlrd = "^2.0.1"
selenium = "^4.16.0"
pandas = "^2.1.4"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.23"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
ruff = "^0.1.9"
boto3 = "^1.34.98"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
